// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skeleton > slot layout 1`] = `
"<div class=\\"ta-skeleton\\">
  <div class=\\"ta-skeleton-image\\"></div>
  <div class=\\"ta-skeleton-title\\"></div>
  <ul class=\\"ta-skeleton-paragraph\\">
    <li></li>
    <li></li>
    <li></li>
  </ul>
  <div class=\\"ta-skeleton-button shape--default\\"></div>
</div>"
`;

exports[`Skeleton > snapshot 1`] = `
"<div class=\\"ta-skeleton\\">
  <div class=\\"ta-skeleton_layout\\">
    <!--v-if-->
    <div class=\\"ta-skeleton_layout-right\\">
      <div class=\\"ta-skeleton-title\\"></div>
      <ul class=\\"ta-skeleton-paragraph\\">
        <li></li>
        <li></li>
        <li></li>
      </ul>
    </div>
  </div>
</div>"
`;
